should be https

--- a/composer.json
+++ b/composer.json
@@ -2,13 +2,13 @@
     "name": "reillo/magento-trexuna-com",
     "description": "Regner Atillo magento.trexuna.com website repo",
     "keywords": ["website"],
-    "homepage": "http://me.trexuna.com",
+    "homepage": "https://me.trexuna.com",
     "license": "MIT",
     "authors": [
         {
             "name": "Regner Atillo",
             "email": "atilloregner@gmail.com",
-            "homepage": "http://me.trexuna.com/"
+            "homepage": "https://me.trexuna.com/"
         }
     ],
     "require": {
